styles/globals.css
:root {
	--bg: rgb(0, 9, 0);
	--fr: rgb(251, 251, 251);
	--or: rgb(255, 128, 0);
	--orf: rgb(254, 150, 47);
	--sh: rgb(58, 170, 240);
	--shh: rgb(47, 156, 224);
}
body {
	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
		sans-serif;
	position: relative;
	height: 98vh;
	display: flex;
	justify-content: center;
	background-color: var(--bg);
	color: var(--fr);
}
body::before {
	content: "";
	background-image: url("../public/mapa3.jpg");
	position: absolute;
	background-size: cover;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	z-index: -1;
	opacity: 0.4;
}

h1 {
	font-size: 3rem;
	text-align: center;
}

h2 {
	font-size: 2rem;
	text-align: center;
}
button {
	border: none;
	background-color: var(--or);
	font-size: 2rem;
	padding: 1vw;
	border-radius: 1vw;
}
button:hover {
	background-color: var(--orf);
	cursor: pointer;
	font-size: 2.05rem;
}

.introButt {
	text-align: center;
	font-size: 6rem !important;
	border-radius: 1vw;
	position: fixed;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
}
.blackbox {
	position: fixed;
	right: 2%;
	width: 40%;
	height: 90vh;
	background-color: rgba(0, 0, 0, 0.518);
	border-radius: 5vw;
	margin: 1vw 0;
}
.mapa {
	position: fixed;
	left: 2%;
	width: 50%;
	height: 90vh;
	background-color: rgba(0, 0, 0, 0.518);
	border-radius: 5vw;
	margin: 1vw 0;
	padding: 0;
}
.smallInfo {
	position: fixed;
	bottom: 1%;
	right: 1%;
}

.answers {
	display: grid;
	grid-template-columns: auto auto;
	padding: 1vw;
}

.answers > button {
	margin: 1vw;
}
.center {
	display: fixed;
	top: 0;
	left: 0;
	transform: translate(calc(50vw - 50%));
	width: 55%;
	height: 95vh;
}
canvas {
	background-color: rgb(255, 255, 255);
	border-radius: 12vw;
}
.floatRight {
	float: right;
}
.share {
	background-color: var(--sh);
	margin: 0.5vw;
	padding: 0;
}
.share:hover {
	background-color: var(--shh);
}
.sb {
	padding: 0.5vw;
	font-size: 1.7rem;
}
.inlineImg {
	display: inline;
	width: 1.5vw;
}
.resultCanvas {
	margin: 0 0 0 2.5vw;
}
.reload {
	margin: 0 0 0vh 5vw;
}
.socialMedia {
	position: fixed;
	bottom: 0;
	right: 0;
	background-color: rgba(0, 0, 0, 0.028);
	border-radius: 0.5vw;
}
.tLogo {
	width: 2vw;
}
.gLogo {
	width: 2vw;
	filter: invert();
}
.ytLogo {
	width: 2vw;
}
.ytButton {
	background-color: #f60101 !important;
}
.buttonImage {
	width: 100%;
	margin: 0;
	border-radius: 1vw;
}
.imgButton {
	padding: 0;
	font-size: 0;
}

.imgButton:hover {
	margin: 0.01vw;
	font-size: 0;
}
.no {
	display: none;
}
.progressPar {
	margin: 1vw auto;
	padding: 2px;
	width: 100%;
	max-width: 500px;
	border: 3px solid var(--or);
	height: 1.8vw;
}
.progress {
	height: 100%;
	background-color: var(--orf);
}
.percentText {
	margin: 0%;
	font-size: 1.6rem;
	text-align: center;
}
.emptyProgress > p {
	width: 100%;
}

